use LESS variables for common color theme

--- a/src/main/webapp/less/breadcrumbs.less
+++ b/src/main/webapp/less/breadcrumbs.less
@@ -1,12 +1,11 @@
 .breadcrumbs-wrapper {
-  border: #ddd  1px solid;
+  border: @border-color  1px solid;
   border-radius: 3px ;
   -webkit-border-radius: 3px ;
   -moz-border-radius: 3px ;
   padding: 0px;
   margin: 1em auto 1em auto;
-  background-color: #f6f6f6;  
-  background-color: #f5f7fa;
+  background-color: @background-general;
 }
 
 .breadcrumbs-wrapper a,
@@ -21,7 +20,7 @@ a.breadcrumbs {
 
 a.breadcrumbs,
 .breadcrumbs-wrapper a {
-    background: #f5f7fa url("../style/images/icons/breadcrumb-arrow.png") no-repeat right 5px;    
+    background: @background-general url("../style/images/icons/breadcrumb-arrow.png") no-repeat right 5px;    
 }
     
     
