--- a/src/main/webapp/less/buttons.less
+++ b/src/main/webapp/less/buttons.less
@@ -1,16 +1,3 @@
-.redirectLink a {
-    border-bottom: 1px solid #777777;
-    border-left: 1px solid #000000;
-    border-right: 1px solid #333333;
-    border-top: 1px solid #000000;
-    color: #000000;
-    display: block;
-    height: 2em;
-    padding: 0 1em;
-    width: 5em;
-    text-decoration: none;
-}
-
 .btn-link {
 	cursor: pointer;
 	text-decoration: underline;
@@ -26,7 +13,7 @@
 .panel h2 .button {
     font-size: small;
     float: right;
-    color: white;
+    color: @text-color;
 }
 
 
@@ -35,39 +22,39 @@ a.button,
 a.disabledButton {
 
 	display: inline-block ;
-	border: 1px solid #333333;
+	border: 1px solid @border-dark;
 	border-radius: 3px ;
 	-webkit-border-radius: 3px ;
 	-moz-border-radius: 3px ;
-	color: #fff;
+	color: @text-color;
 	font-size: small;
 	margin: 0px 10px 10px 0px;
 	padding: 7px 12px;
-	background-color: #648191;
+	background-color: @accent-color;
 	padding-left: 10px;
 	padding-right: 10px;
 	text-decoration: none;
 }
 
 a.disabledButton, a.button[disabled], button[disabled] {
-	color: #ccc;
+	color: @text-muted;
 }
 
 a.warning, button.warning
 {
-	background-color: #aa6708;	
+	background-color: @warning-color;	
 }
 
 a.cancel, button.cancel
 {
-	background-color: #DEDEDF;
-    color: #333333;
-	border-color: #999999;
+	background-color: @disabled-color;
+    color: @text-dark;
+	border-color: @border-color;
 }
 
 a.delete, button.delete
 {
-	background-color: #ce4844;
+	background-color: @danger-color;
 }
 
 button.js_enabled {
@@ -76,7 +63,7 @@ display: inline-block !important;
 
 /* Gives a "click" effect for otherwise flat buttons when pressed */
 a:active.button, button:active {
-	border: 1px solid white;
+	border: 1px solid @border-highlight;
 }
 
 /* Ensure active buttons provide feedback */
