--- a/src/main/webapp/less/main.less
+++ b/src/main/webapp/less/main.less
@@ -1,6 +1,33 @@
 /*
  * Main LESS 
  */
+
+// Variables
+@link-color: #000;
+
+@brand-color: #002147;
+@accent-color: #648191;
+@warning-color: #aa6708;
+@danger-color: #ce4844;
+@disabled-color: #DEDEDF;
+
+@background-general:#f5f7fa; 
+@background-headings: #eaeef2;
+@background-editing:#ebf4fb;
+@background-info: #fafafa;
+@background-info-headings: #f1f1f1;
+
+@border-color: #ddd;
+@border-dark: #333;
+@border-editing: #aacfe4;
+@border-highlight: #FFF;
+
+// Text for controls not content...
+@text-color: #fff;
+@text-muted: #ccc;
+@text-dark: #333;
+@text-dark-muted: #666;
+
 @import "style.less";
 @import "alert.less";
 @import "breadcrumbs.less";
