prevent horizontal resize of VQD - see issue #65

--- a/src/main/webapp/database-explorer/components/vqd/vqd.css
+++ b/src/main/webapp/database-explorer/components/vqd/vqd.css
@@ -15,7 +15,7 @@
 		height: 400px;
 		margin: 10px;
 		background: url(../../../style/images/back.gif) fixed;
-		resize: both;
+		resize: vertical;
 		overflow:auto;
 	}
 	
