--- a/src/main/webapp/components/header/header.html
+++ b/src/main/webapp/components/header/header.html
@@ -1,5 +1,7 @@
 	<div class="header">
-	    <h1 class="site-title"><a href="#/">ORDS</a></h1>
+	    <h1 class="site-title">
+				<i class="pe-7s-server pe-2x pe-va"></i><a href="#/">Trunk<em>DB</em></a>
+			</h1>
 	    <div class="header-panel search-box">
 		    <form name="searchForm" id="searchForm" ng-submit='search()' >
 			    <div>
