--- a/src/main/webapp/components/welcome/welcome.html
+++ b/src/main/webapp/components/welcome/welcome.html
@@ -1,8 +1,24 @@
-<h1>Welcome to ORDS</h1>
+<h1>Welcome to TrunkDB</h1>
 
 <div class="intro">
-	<p>The Online Research Database Service (ORDS) is an online relational database management system for researchers. It is hosted
-		on public cloud infrastructure and supported by Cetis LLP on behalf of IT Services at the University of Oxford.</p>
+	<p> 
+		TrunkDB is an online relational database management system for researchers and analysts. 
+		You can work on databases as a team across institutions, import data from Microsoft Access and text
+		files, and publish query results as datasets and embed them in websites and dashboards. 
+	</p>
+	<p>		
+		TrunkDB is hosted on public cloud infrastructure and supported by Cetis LLP. The code that runs this 
+		service is open source and licensed under the Apache Software License.
+	</p>
+	<p>
+		TrunkDB started life as the Online Research Database Service (ORDS) at the University of Oxford, and was
+		developed with the support of Jisc.
+	</p>
+
+	<p>
+		We're in private beta right now, but if you'd like to get involved, drop an email to 
+		<a href="mailto:info@cetis.org.uk">info@cetis.org.uk</a>
+	</p>
 
 	<p ng-show="showPendingMessage()"><em>{{pendingMessage}}</em></p>
 </div>
