--- a/src/main/webapp/database/views/database.html
+++ b/src/main/webapp/database/views/database.html
@@ -52,7 +52,7 @@
 	<div class="col-6">
 		<div class=" bs-callout bs-callout-info">
 			<h4>Database Help</h4>
-			<p>This page allows you to manage your ORDS database.</p>
+			<p>This page allows you to manage your database.</p>
 			<p> You can have up to three copies of each database: the main or live version, a milestone version (to preserve a snapshot
 				of the database as it was at a particular point), and a test version (which allows you to try out changes before making
 				these in the live version). </p>
