--- a/src/main/webapp/less/main.less
+++ b/src/main/webapp/less/main.less
@@ -29,6 +29,7 @@
 @text-dark-muted: #666;
 
 @import "style.less";
+@import "branding.less";
 @import "alert.less";
 @import "breadcrumbs.less";
 @import "buttons.less";
