--- a/src/main/webapp/project/views/editinvitation.html
+++ b/src/main/webapp/project/views/editinvitation.html
@@ -11,7 +11,7 @@
 <form class="process" ng-submit="editInvitation()">
     <div class="formItem">
         <label for="editableRoleList">Required role<span class="small">Please specify the new permission level for this member <br> 
-			<a href="http://help.it.ox.ac.uk/research/ords/howto02#ORDS-roles" target="_blank">More information about ORDS roles</a></span></label>
+			<a href="http://help.it.ox.ac.uk/research/ords/howto02#ORDS-roles" target="_blank">More information about roles</a></span></label>
         <select ng-model = "invite.roleRequired" name="editableRoleList" id="editableRoleList"> 
             <option value="viewer">Viewer</option> 
             <option value="contributor">Contributor</option> 
