--- a/src/main/webapp/project/views/newproject.html
+++ b/src/main/webapp/project/views/newproject.html
@@ -6,10 +6,17 @@
 <h1>Create New Project</h1>
 	
 <div class="formItem">
-    <div>
-This project is a trial project.
+	<div>
+		This project is a trial project.
+	</div>
+	<p>
+		Trial projects are subject to some limitations and do not appear in the public project list.
+	</p>
+
+	<p>
+		Once you have created the project, you will be able to request that the project be converted to a full project, 
+		without these limitations.
+	</p>
 </div>
-<br> Trial projects are subject to some limitations. You will not be able to add more than a hundred records to any database table (you can upload tables of over a hundred records, but will not be able to add any further records to these), and you will not be able to make your data publicly available by creating and publishing datasets. Trial projects do not appear in the public ORDS project list. <p></p><p> Once you have created the project, you will be able to request that the project be converted to a full project, without these limitations.
-</p></div>
 
 <projectform></projectform>
