--- a/src/main/webapp/project/views/project.html
+++ b/src/main/webapp/project/views/project.html
@@ -44,7 +44,7 @@
 	<div class="col-6">
 		<div class="bs-callout bs-callout-info">
 			<h4>Projects</h4>
-			<p>A project may be thought of as a container for one or more databases. The project owner is the ORDS user with primary
+			<p>A project may be thought of as a container for one or more databases. The project owner is the user with primary
 				responsibility for a project. By default, the user who creates a project is its owner. There may also be other project
 				members, who have some level of access to the databases within the project.</p>
 			<p>Anyone can be invited to join a project, however they must have an account with a member of the UK Access Management Federation
