--- a/src/main/webapp/components/login/login.html
+++ b/src/main/webapp/components/login/login.html
@@ -4,12 +4,10 @@
         <p>Log in to <strong>create databases or work with your research data.</strong></p>
 			
         <p> If you are a member of a UK higher education institution, click the button below to log in via the UK Access Management Federation.</p>
-        <p> If this is the first time you have used the ORDS, you will be prompted to register after logging in. </p>
-			
-		<p> If you are not a member of a UK higher education institution, you will need to request a virtual University card (which will provide you with SSO credentials) - to arrange this, please contact the owner of the ORDS project you wish to access.</p>
+        <p> If this is the first time you have used the service, you will be prompted to register after logging in. </p>
     
 			<!-- These buttons aren't enabled in shib config
-            <a class="button" href="#/signup">Sign up to use ORDS</a>
+            <a class="button" href="#/signup">Sign up</a>
 			<a class="button" href="#/login">Log in using a user name and password</a>
             -->
             <a ng-show="targetLocation" class="button" href="/Shibboleth.sso/Login?target={{targetLocation}}">Log in</a>
