improved CSS for dialogs, incorporated into LESS structure

--- a/src/main/webapp/database-explorer/components/apidialog/apidialog.html
+++ b/src/main/webapp/database-explorer/components/apidialog/apidialog.html
@@ -4,6 +4,6 @@
 		<input id="apilink" type="text" readonly value="{{apiUrl}}">
 	</div>
 	<div class="ngdialog-buttons">
-		<button class="button" ng-click="copyLinkToClipboard()" alt="Copy API URL for this dataset to the clipboard" aria-label="Copy API URL for this dataset to the clipboard">Copy link to clipboard</a>
+		<button class="ngdialog-button ngdialog-button-primary" ng-click="copyLinkToClipboard()" alt="Copy API URL for this dataset to the clipboard" aria-label="Copy API URL for this dataset to the clipboard">Copy link to clipboard</a>
 	</div>
 </div>
