--- a/src/main/webapp/less/main.less
+++ b/src/main/webapp/less/main.less
@@ -11,6 +11,7 @@
 @danger-color: #ce4844;
 @disabled-color: #DEDEDF;
 
+@background-page-color: #fff;
 @background-general:#f5f7fa; 
 @background-headings: #eaeef2;
 @background-editing:#ebf4fb;
@@ -39,3 +40,4 @@
 @import "pagination.less";
 @import "panels.less";
 @import "tables.less";
+@import "dialog.less";
