--- a/src/main/webapp/less/style.less
+++ b/src/main/webapp/less/style.less
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-color: #fff;
+	background-color: @background-page-color;
   color: #555;
 	font-family: Arial, Helvetica, Tahoma, sans-serif;
 	font-size: 1em;
@@ -29,7 +29,7 @@ body {
 
 .pageContainer {
 	margin: 0 2%;
-  background: #fff;
+  background: @background-page-color;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -236,14 +236,6 @@ margin:0px;
 
 .padding {
 	padding: 5px 5px 5px 15px;
-}
-
-#dialogbuttons {
-	width: 95%;
-	position: relative;
-	bottom: 0;
-	padding: 15px 8px 0 0;
-	text-align: right;
 }
 
 .error {
