--- a/src/main/webapp/database-explorer/components/vqd/vqd.css
+++ b/src/main/webapp/database-explorer/components/vqd/vqd.css
@@ -22,6 +22,13 @@
 	.vqd_sql {
 		height: 100px;
 	}
+
+
+
+	textarea.vqd_sql {
+    	width: 100%;
+    	resize: vertical;
+	}
 	
 	.vqd_table table {
 		border-collapse: collapse;
