--- a/src/main/webapp/less/tables.less
+++ b/src/main/webapp/less/tables.less
@@ -136,7 +136,9 @@ table.data-table td.add{
 }
 
 /* ensures that controls don't overspill their cells */
-.table-data-form input, textarea{
+.table-data-form input, 
+.table-data-form textarea
+{
   width:90%;
 }
 
