--- a/src/main/webapp/project/views/editmember.html
+++ b/src/main/webapp/project/views/editmember.html
@@ -19,7 +19,7 @@
         </select>
     </div>
     <div class="form-buttons">
-        <button name="cancel" type="submit">Cancel</button>
-        <button name="submit" class="go-go-go" type="submit">Save changes</button>
+        <button name="cancel" class="cancel" ng-click="cancel()">Cancel</button>
+        <button name="submit" class="button">Save changes</button>
     </div>
 </form>
