--- a/src/main/webapp/project/views/newdatabase.html
+++ b/src/main/webapp/project/views/newdatabase.html
@@ -53,7 +53,7 @@
 
                     
 	<div class="form-buttons">
-	 <button name="cancel" type="submit" ng-click="cancel()">Cancel</button>
-	 <button name="submit" class="go-go-go" type="submit" ng-disabled="newDatabaseForm.$invalid">Add</button>
+	 <button name="cancel" class="button cancel" ng-click="cancel()">Cancel</button>
+	 <button name="submit" class="button" type="submit" ng-disabled="newDatabaseForm.$invalid">Add</button>
 	</div>
 </form>
