--- a/src/main/webapp/project/views/newmember.html
+++ b/src/main/webapp/project/views/newmember.html
@@ -33,7 +33,7 @@
 	</div>
 		
     <div class="form-buttons">
-        <button name="cancel" type="submit">Cancel</button>
+        <button name="cancel" class="cancel" ng-click="cancel()">Cancel</button>
         <button name="submit" class="go-go-go" type="submit">Save changes</button>
     </div>
 </form>
@@ -56,7 +56,7 @@
 	</div>
 
     <div class="form-buttons">
-        <button name="cancel" type="submit">Cancel</button>
-        <button name="submit" class="go-go-go" type="submit">Send Invitation</button>
+        <button name="cancel" class="cancel" ng-click="cancel()">Cancel</button>
+        <button name="submit" class="button" type="submit">Send Invitation</button>
     </div>
 </form>
