--- a/src/main/webapp/views/searchresults.html
+++ b/src/main/webapp/views/searchresults.html
@@ -3,10 +3,9 @@
 </div>
 
 <div class="panel">
-	<h2>Projects</h2>
+	<h2>Projects <i ng-hide="results.$resolved" class="pe-7s-refresh pe-va pe-spin"></i></h2>
 	<p>
 		<span ng-show="results.$resolved">There are {{results.length}} project(s) that have been marked as open and completely satisfy your search criteria (if entered)</span>
-		<span ng-hide="results.$resolved">Loading…</span>
 	</p>
 	<table class="table-wide">
 		<tbody>
@@ -17,24 +16,20 @@
 				<th>Contact</th>
 			</tr>
 
-			<tr ng-hide="results.$resolved">
-				<td colspan="5" class=“icon-loader spin”>Loading…</td>
-			</tr>
-
 			<tr ng-show="results.$resolved" dir-paginate="project in results | itemsPerPage: 10 track by project.projectId">
 				<td>
-					<a href="#/project/{{project.projectId}}">{{project.name}}</a>
+					<p><a href="#/project/{{project.projectId}}">{{project.name}}</a></p>
 				</td>
 				<td>
-					{{project.description}}
+					<p>{{project.description}}</p>
 				</td>
 				<td>
-					{{project.user.name}}
+					<p>{{project.user.name}}</p>
 				</td>
 				<td>
-					<div>
+					<p>
 						<a href="#/contact/{{project.projectId}}">Contact {{project.user.name}}</a>
-					</div>
+					</p>
 				</td>
 			</tr>
 		</tbody>
@@ -46,28 +41,28 @@
 
 
 	<div class="panel">
-		<h2>Datasets</h2>
+		<h2>Datasets <i ng-hide="datasetResults.$resolved" class="pe-7s-refresh pe-va pe-spin"></i></h2>
 		<p>
 			<span ng-show="datasetResults.$resolved">There are {{datasetResults.length}} dataset(s) that have been marked as open and completely satisfy your search criteria (if entered)</span>
-			<span ng-hide="datasetResults.$resolved">Loading…</span>
 		</p>
 		<table class="table-wide">
+			<thead>
+			<tr>
+				<th>Dataset name</th>
+				<th>Description</th>
+				<th></th>
+			</tr>
+			</thead>
 			<tbody>
-				<tr>
-					<th style="width: 200px">Dataset Name</th>
-					<th style="width: 200px">Description</th>
-				</tr>
-
-				<tr ng-hide="datasetResults.$resolved">
-					<td colspan="5" class=“icon-loader spin”>Loading…</td>
-				</tr>
-
 				<tr ng-show="datasetResults.$resolved" dir-paginate="dataset in datasetResults | itemsPerPage: 10 track by dataset.viewName">
 					<td>
-						{{dataset.viewName}}
+						<p>{{dataset.viewName}}</p>
 					</td>
 					<td>
-						{{dataset.viewDescription}}
+						<p>{{dataset.viewDescription}}</p>
+					</td>
+					<td>
+						<p><apidialog database="{{dataset.databaseId}}" dataset="{{dataset.id}}"/></p>
 					</td>
 				</tr>
 			</tbody>
