added help text for queries

--- a/src/main/webapp/database-explorer/views/explorer.html
+++ b/src/main/webapp/database-explorer/views/explorer.html
@@ -62,7 +62,14 @@
 					</div>
 				</form>
 			</div>
+		</div>
 
+		<div class="bs-callout bs-callout-info">
+			<h4>Query Help</h4>
+			<p>Make sure you enclose column names in double-quotes and text values in single-quotes, for example
+				<code>SELECT * FROM omdb WHERE "Genre" LIKE '%Horror%'</code>. Also, text-based conditions are 
+				case-sensitive unless you use the ILIKE operator instead of LIKE or =.
+			</p>
 		</div>
 	</div>
 </div>
